wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer_3.rs
#[derive(wallet_common_macros::ErrorCategory)]
#[allow(dead_code)]
enum ChildError {
    #[category(expected)]
    Unit,
}

#[derive(wallet_common_macros::ErrorCategory)]
#[allow(dead_code)]
enum RootError {
    #[category(defer)]
    SingleStruct {
        field: ChildError,
    }
}

fn main() {
    let _ = RootError::SingleStruct {
        field: ChildError::Unit,
    };
}
